AUGREL/src/objects/Community_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configurable settings for the customized Community portals.</description>
    <fields>
        <fullName>Default_VF_Page__c</fullName>
        <inlineHelpText>The Name of the default VF page.</inlineHelpText>
        <label>Default VF Page</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Theft_Flag_Error__c</fullName>
        <description>ID Theft Flag Error Page</description>
        <label>ID Theft Flag Error</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Redirect_URL__c</fullName>
        <inlineHelpText>URL to redirect to if the community pages are loaded outside of an iFrame.</inlineHelpText>
        <label>Redirect URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Community Settings</label>
</CustomObject>